--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: .deno
-          key: ${{ runner.os }}-deno-${{ matrix.deno-version }}-${{ hashFiles('**/*.ts') }}
+          key: ${{ runner.os }}-deno-${{ matrix.deno-version }}-vim-${{ matrix.host-version.vim }}-nvim-${{ matrix.host-version.nvim }}-${{ hashFiles('**/*.ts') }}
         timeout-minutes: 1
       - uses: thinca/action-setup-vim@v1
         id: vim
