Use `denops_test` module instead of `denops_core/test` module
cf. https://github.com/vim-denops/denops.vim/pull/233

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -121,7 +121,7 @@ jobs:
             make test-deno
         env:
           DENO_DIR: ../.deno
-          DENOPS_PATH: ../denops.vim
+          DENOPS_TEST_DENOPS_PATH: ../denops.vim
           DENOPS_TEST_VIM: ${{ steps.vim.outputs.executable_path }}
           DENOPS_TEST_NVIM: ${{ steps.nvim.outputs.executable_path }}
         timeout-minutes: 10
