--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DENOPS_PATH="${DENOPS_PATH:-../../vim-denops/denops.vim}"
+DENOPS_TEST_DENOPS_PATH="${DENOPS_TEST_DENOPS_PATH:-../../vim-denops/denops.vim}"
 DENOPS_TEST_VIM="${DENOPS_TEST_VIM:-vim}"
 DENOPS_TEST_NVIM="${DENOPS_TEST_NVIM:-nvim}"
