--- a/.github/workflows/udd.yml
+++ b/.github/workflows/udd.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4
         with:
+          token: ${{ secrets.UDD_TOKEN }}
           commit-message: |
             Update Deno dependencies
 
