--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Checks
 
 on:
   push:
@@ -23,6 +23,9 @@ jobs:
           - 1.32.0
           - 1.x
     runs-on: ${{ matrix.runner }}
+    name: >-
+      Other checks --
+      Deno ${{ matrix.deno-version }}
     steps:
       - uses: actions/checkout@v3
         timeout-minutes: 1
@@ -66,6 +69,12 @@ jobs:
           - vim: head
             nvim: head
     runs-on: ${{ matrix.runner }}
+    name: >-
+      Test --
+      Deno ${{ matrix.deno-version }} &&
+      Vim ${{ matrix.host-version.vim }} &&
+      Neovim ${{ matrix.host-version.nvim }}
+      on ${{ matrix.runner }}
     steps:
       - run: git config --global core.autocrlf false
         if: runner.os == 'Windows'
